2017-11-15  Araki Ken  <arakiken@users.sf.net>

	* fb/ui_window.c:
	  max_glyph_width is limited to font_width - font_x_off in draw_string_intern().

	* fb/ui_font.[ch]:
	  - Compiling error is fixed.
	  - ui_get_bitmap_width() and ui_get_bitmap_width_aa() are removed.

2017-11-14  Araki Ken  <arakiken@users.sf.net>

	* fb/ui_imagelib.c:
	  - load_sixel_with_mask_from_file_1bpp() is enabled only if
	    BUILTIN_SIXEL macro is defined.
	  - load_file() tries load_sixel_from_data_sharepalette() if depth <= 8 and
	    pic_mod is normal.

	* c_sixel.c:
	  - load_sixel_from_data_sharepalette() is added if SIXEL_SHAREPALETTE macro
	    is defined.
	  - read_sixel_file() is added.

	* vt_parser.c:
	  "#0;9;%d;%d;%d" instead of "#0;2;%d;%d;%d" is added to sixel sequences.

2017-11-12  Araki Ken  <arakiken@users.sf.net>

	* c_sixel.c:
	  - Checking if width and height is changed is placed outside of realloc_pixels().
	  - The way of calculation of accessing address of 'pixels' array is changed.

	* ui_imagelib.c, vt_parser.c: Minor fixes.

2017-11-11  Araki Ken  <arakiken@users.sf.net>

	* skk/dict.c: dict_set_global() is fixed.

	* vt_edit.c: vt_edit_fill_area() applies bce fg/bg colors to a character to be filled.

	* vt_screen.[ch]: vt_screen_fill_area() is changed from a function to a wrapper macro
	  of vt_edit_fill_area().

2017-11-11  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c: Parameter of SL and SR is regarded as 1 if omitted.

	* vt_edit.c:
	  - {copy|erase}_area() are used in vt_edit_scroll_{right|left}ward()
	    instead of vt_edit_{copy|erase}_area().
	  - The third argument of erase_area() is fixed in
	    vt_edit_scroll_leftward_from_cursor().

2017-11-11  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c: DECSR is supported.

2017-11-10  Araki Ken  <arakiken@users.sf.net>

	* num_of_xxx -> num_xxx

2017-11-10  Araki Ken  <arakiken@users.sf.net>

	* vt_cursor.[ch]: Functions whose return values are not used return void.

	* vt_edit.[ch]: