@@ -1,3 +1,11 @@
+2017-11-18  Araki Ken  <arakiken@users.sf.net>
+
+	* win32/ui_window.c: WM_SYSKEYDOWN event of VK_OEM_XXX keys are ignored.
+
+	* im_skk.c: sticky_shift_key is separated to sticky_shift_ch and sticky_shift_ksym.
+
+	* quartz/ui_event_source.c, quartz/ui_scrollbar.c: Compiling error is fixed.
+
 2017-11-15  Araki Ken  <arakiken@users.sf.net>
 
 	* fb/ui_window.c:
